--- a/common/header.html
+++ b/common/header.html
@@ -19,7 +19,7 @@
         </a>
       </li>
       <li>
-        <a href="javascript:void 0;">
+        <a id="logout" href="javascript:void 0;">
           <i class="fa fa-sign-out"></i>
           退出
         </a>
