--- a/common/aside.html
+++ b/common/aside.html
@@ -8,20 +8,20 @@
     <ul class="list-unstyled">
       <li>
         <a href="/index.php" class="active">
-          <i class="fa fa-home"></i>
+          <i class="fa fa-dashboard"></i>
           仪表盘
-        </a>
-      </li>
-      <li>
-        <a href="/index.php/user/user_list">
-          <i class="fa fa-bell"></i>
-          用户管理
         </a>
       </li>
       <li>
         <a href="./teacher/teacher_list.html">
           <i class="fa fa-bell"></i>
           讲师管理
+        </a>
+      </li>
+      <li>
+        <a href="./teacher/teacher_list.html">
+          <i class="fa fa-indent"></i>
+          分类管理
         </a>
       </li>
       <li>
@@ -41,43 +41,9 @@
               课程列表
             </a>
           </li>
-          <li>
-            <a href="../course/course_category.html">
-              课程分类
-            </a>
-          </li>
-          <li>
-            <a href="../course/course_topic.html">
-              课程专题
-            </a>
-          </li>
         </ul>
       </li>
-      <li>
-        <a href="../adv/advert_list.html">
-          <i class="fa fa-bell"></i>
-          广告管理
-        </a>
-      </li>
-      <li>
-        <a href="javascript:void 0;">
-          <i class="fa fa-cog"></i>
-          系统设置
-          <i class="arrow fa fa-angle-right"></i>
-        </a>
-        <ul class="list-unstyled">
-          <li>
-            <a href="javascript:void 0;">
-              网站设置
-            </a>
-          </li>
-          <li>
-            <a href="javascript:void 0;">
-              权限管理
-            </a>
-          </li>
-        </ul>
-      </li>
+
     </ul>
   </div>
 </div>
