渲染讲师列表

--- a/common/aside.html
+++ b/common/aside.html
@@ -7,19 +7,19 @@
   <div class="navs">
     <ul class="list-unstyled">
       <li>
-        <a href="/index.php" class="active">
+        <a href="/index" class="active">
           <i class="fa fa-dashboard"></i>
           仪表盘
         </a>
       </li>
       <li>
-        <a href="./teacher/teacher_list.html">
+        <a href="/teacher/list">
           <i class="fa fa-bell"></i>
           讲师管理
         </a>
       </li>
       <li>
-        <a href="./teacher/teacher_list.html">
+        <a href="/teacher/teacher_list.html">
           <i class="fa fa-indent"></i>
           分类管理
         </a>
