侧边栏选中效果

--- a/common/aside.html
+++ b/common/aside.html
@@ -7,7 +7,7 @@
   <div class="navs">
     <ul class="list-unstyled">
       <li>
-        <a href="/index" class="active">
+        <a href="/index" class="">
           <i class="fa fa-dashboard"></i>
           仪表盘
         </a>
@@ -19,7 +19,7 @@
         </a>
       </li>
       <li>
-        <a href="/teacher/teacher_list.html">
+        <a href="/category/list">
           <i class="fa fa-indent"></i>
           分类管理
         </a>
@@ -30,14 +30,14 @@
           课程管理
           <i class="arrow fa fa-angle-right"></i>
         </a>
-        <ul class="list-unstyled">
+        <ul class="list-unstyled" id="course-list">
           <li>
-            <a href="../course/course_add.html">
+            <a href="/course/add">
               课程添加
             </a>
           </li>
           <li>
-            <a href="../course/course_list.html">
+            <a href="/course/list">
               课程列表
             </a>
           </li>
