--- a/teacher/manage.html
+++ b/teacher/manage.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>学IT - 后台管理系统</title>
   <?php include '/common/css.html'?>
+  <link rel="stylesheet" href="/public/assets/bootstrap-datepicker/css/bootstrap-datepicker.min.css">
 </head>
 <body>
 
