--- a/dashboard/settings.html
+++ b/dashboard/settings.html
@@ -25,7 +25,7 @@
 
 <script type="text/template" id="tpl_profile">
   <form action="" class="form-horizontal">
-    <input type="hidden" value="{{tc_id}}">
+    <input type="hidden" name="tc_id" value="{{tc_id}}">
     <div class="form-group">
       <label for="" class="col-md-3 control-label">姓名</label>
       <div class="col-md-5">
@@ -52,10 +52,10 @@
       <label for="" class="col-md-3 control-label">性别</label>
       <div class="col-md-3">
         <label class="radio-inline">
-          <input name="tc_gender" type="radio" {{if tc_gender==0}}checked{{/if}}> 男
+          <input name="tc_gender" value="0" type="radio" {{if tc_gender==0}}checked{{/if}}> 男
         </label>
         <label class="radio-inline">
-          <input name="tc_gender" type="radio" {{if tc_gender==1}}checked{{/if}}> 女
+          <input name="tc_gender" value="1" type="radio" {{if tc_gender==1}}checked{{/if}}> 女
         </label>
       </div>
     </div>
@@ -67,21 +67,15 @@
     </div>
     <div class="form-group">
       <label for="" class="col-md-3 control-label">籍贯</label>
-      <div class="col-md-5">
-        <select name="" class="form-control input-sm">
-          <option value="">河北省</option>
-          <option value="">山东省</option>
-          <option value="">北京市</option>
+      <div class="col-md-5" id="region">
+        <select name="tc_province" id="p" data-id="{{tc_province}}" class="form-control input-sm">
+          <option value="">请选择省</option>
         </select>
-        <select name="" class="form-control input-sm">
-          <option value="">河北省</option>
-          <option value="">山东省</option>
-          <option value="">北京市</option>
+        <select name="tc_city" id="c" data-id="{{tc_city}}" class="form-control input-sm">
+          <option value="">请选择市</option>
         </select>
-        <select name="" class="form-control input-sm">
-          <option value="">河北省</option>
-          <option value="">山东省</option>
-          <option value="">北京市</option>
+        <select name="tc_district" id="d" data-id="{{tc_district}}" class="form-control input-sm">
+          <option value="">请选择区</option>
         </select>
       </div>
     </div>
@@ -106,7 +100,7 @@
     <div class="form-group">
       <label for="" class="col-md-3 control-label">个人介绍</label>
       <div class="col-md-5 ckeditor">
-        <textarea name="" rows="15" class="form-control input-sm">{{tc_introduce}}</textarea>
+        <textarea name="tc_introduce" id="introduce" rows="15" class="form-control input-sm">{{tc_introduce}}</textarea>
       </div>
     </div>
     <div class="form-group">
